WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220830
textarea can't handle switch direction
https://bugs.webkit.org/show_bug.cgi?id=220830
Summary
textarea can't handle switch direction
Ebrahim Byagowi
Reported
2021-01-21 14:37:11 PST
Created
attachment 418087
[details]
actual Open data:text/html,<textarea id=textarea>a%0Ab%0Ac</textarea><button onclick="textarea.dir=textarea.dir==='rtl'?'ltr':'rtl'">Switch</button><br><textarea>a%0Ab%0Ac</textarea><br><textarea dir=rtl>a%0Ab%0Ac</textarea> Use switch button or right click switch textarea's direction from Paragraph Direction Expected: Like other browsers, not confused expand icon, to have the first like the third after switch button being hit. Actual: The used expand icon is confused when direction is changed. Also the scrollbar's animation isn't correct.
Attachments
actual
(178.61 KB, image/png)
2021-01-21 14:37 PST
,
Ebrahim Byagowi
no flags
Details
Patch
(4.39 KB, patch)
2024-09-08 14:42 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(5.08 KB, patch)
2024-09-08 18:22 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ebrahim Byagowi
Comment 1
2021-01-21 14:39:24 PST
Not that impacting but hit me while using Safari on some site so will try to work on this myself but helps would be nice :)
Smoley
Comment 2
2021-01-21 16:43:24 PST
Thanks for filing, I can reproduce this on Safari 13.1.3 and STP 118.
Radar WebKit Bug Importer
Comment 3
2021-01-21 16:43:42 PST
<
rdar://problem/73475239
>
Sam Sneddon [:gsnedders]
Comment 4
2021-01-22 11:33:50 PST
Note that this appears to be specifically when the the textarea has overflow. If you expand the textarea before changing its direction such that there is no overflow, this doesn't reproduce. I think :smfr has been working on overflow-related stuff recently, so CC'ing him.
alan
Comment 5
2024-09-08 14:42:27 PDT
Created
attachment 472494
[details]
Patch
alan
Comment 6
2024-09-08 18:22:58 PDT
Created
attachment 472497
[details]
[fast-cq]Patch
EWS
Comment 7
2024-09-08 19:36:00 PDT
Committed
283327@main
(7a6719898c9a): <
https://commits.webkit.org/283327@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472497
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug