textarea can't handle switch direction https://bugs.webkit.org/show_bug.cgi?id=220830

Reviewed by Simon Fraser.

Resize control does not get updated until after its layers gets invalidated.
Without a scrollbar we paint the corner through normal renderer painting (and it works fine), but
when scrollbar is present, corner gets its own layer.

This patch ensures we invalidate the associated layer on inline direction change.

* LayoutTests/fast/scrolling/scroll-corner-update-on-direction-change-expected.html: Added.
* LayoutTests/fast/scrolling/scroll-corner-update-on-direction-change.html: Added.
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::calculateClipRects const):
* Source/WebCore/rendering/RenderLayerScrollableArea.cpp:
(WebCore::RenderLayerScrollableArea::invalidateScrollCornerRect):

Canonical link: https://commits.webkit.org/283327@main