Source/WebCore/rendering/RenderLayerScrollableArea.cpp
@@ -819,10 +819,8 @@ void RenderLayerScrollableArea::invalidateScrollCornerRect(const IntRect& rect)
     if (!showsOverflowControls())
         return;
 
-    if (GraphicsLayer* layer = layerForScrollCorner()) {
-        layer->setNeedsDisplayInRect(rect);
-        return;
-    }
+    if (layerForScrollCorner())
+        return ScrollableArea::invalidateScrollCorner(rect);
 
     if (m_scrollCorner)
         m_scrollCorner->repaintRectangle(rect);
